--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=root
+spring.datasource.password=9425793367
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
