--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=root
 spring.datasource.password=9425793367
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=8000
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
