--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/productservice
-spring.datasource.username=root
-spring.datasource.password=9425793367
+spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
+spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
+spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=8000
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+server.port=${PRODUCT_SERVICE_DB_PORT}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${PRODUCT_SERVICE_DB_ISSUER_URL}
+
+#jdbc:mysql://localhost:3306/productservice
+#root
+#9425793367
+#8000
+#http://localhost:9000
