Environment variable implementation and connected with aws database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=${PRODUCT_SERVICE_DB_ISSUER
 #9425793367
 #8000
 #http://localhost:9000
+
+#aws RDS
+#jdbc:mysql://productserviceanduserservice.cr31zv7ia2bs.ap-south-1.rds.amazonaws.com:3306/productserviceuserservice
+#psus
+#psusdatabase
+#http://userservice-prod.ap-south-1.elasticbeanstalk.com
